# bornicho1982-Neurid-AI-Music-Player

./: ejemplo.html  package.json
my-music-player/: .gitignore  README.md  package-lock.json  package.json
my-music-player/src/: App.css  App.tsx  db.ts  index.css
my-music-player/src-tauri/: Cargo.toml  tauri.conf.json
my-music-player/src-tauri/capabilities/: default.json
my-music-player/src-tauri/permissions/: spotify.toml
my-music-player/src-tauri/permissions/autogenerated/: default.toml
my-music-player/src-tauri/src/: main.rs
my-music-player/src-tauri/src/audio/: mod.rs
my-music-player/src-tauri/src/oauth/: mod.rs
my-music-player/src/ai/: aiWorker.ts
my-music-player/src/components/: PlayerControls.tsx  Visualizer.tsx
my-music-player/src/services/: deezerConnector.ts  geminiService.ts  localAIService.ts  lyricsService.ts  pipedResolver.ts  spotifyConnector.ts  ytMusicConnector.ts
my-music-player/src/store/: playerStore.ts
my-music-player/src/views/: HomeView.tsx
