[package]
name = "my-music-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "my_music_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20.1"
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"
lofty = "0.24.0"
reqwest = { version = "0.13.3", features = ["json", "multipart", "form"] }
tiny_http = "0.12.0"
url = "2.5.8"
tauri-plugin-http = "2"
tokio = { version = "1", features = ["full"] }
llama-cpp-2 = "0.1.72"
urlencoding = "2.1.3"
